--- a/source/frontend/data/window_main.glade
+++ b/source/frontend/data/window_main.glade
@@ -115,10 +115,14 @@
           <object class="GtkGrid">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
+            <property name="halign">center</property>
             <child>
               <object class="GtkSpinButton" id="inputKey">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
+                <property name="halign">center</property>
+                <property name="margin-left">5</property>
+                <property name="margin-right">5</property>
                 <property name="margin-top">10</property>
                 <property name="placeholder-text" translatable="yes">Key</property>
                 <property name="adjustment">adjustment1</property>
@@ -136,6 +140,7 @@
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
+                <property name="halign">center</property>
                 <property name="margin-top">10</property>
                 <property name="label" translatable="yes">Key</property>
               </object>
